--- a/media/scss/blog.scss
+++ b/media/scss/blog.scss
@@ -3,6 +3,28 @@
 .blog {
   padding: 0;
 
+  ul.categories {
+    list-style: none;
+    display: inline-block;
+    font-size: 1.5em;
+    font-family: 'Arvil Sans', Arial;
+    padding: 0;
+    margin: 0;
+
+    li {
+      display: inline-block;
+      margin: 0 1em 0 0;
+
+      a {
+        color: $graey;
+      }
+
+      &.selected a {
+        color: $blue;
+      }
+    }
+  }
+
   .blogPost {
     padding: 1em 0;
     border-bottom: 2px solid #ddd;
