--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -28,19 +28,22 @@ h1 {
 
   span {
     line-height: 1;
-    font-size: .4em;
-    letter-spacing: 1px;
-    font-family: Univers, Arial;
-    font-style: italic;
-    color: #808284;
+    font-size: 0.75em;
+    letter-spacing: 2px;
+    //font-family: Univers, Arial;
+    font-family: 'Arvil Sans', Arial;
+    //font-style: italic;
+    color: #636363;
     vertical-align: top;
+    text-align:center;
+    display:block;
 
-    em {
-      color: $orange;
-      font-weight: bold;
-      vertical-align: top;
-      //text-shadow: 0 0 0.25em rgba(0, 0, 0, .1);
-    }
+    //em {
+    //  color: $orange;
+    //  font-weight: bold;
+    //  vertical-align: top;
+    //  //text-shadow: 0 0 0.25em rgba(0, 0, 0, .1);
+    //}
 
     &:before {
       content: '\a';
@@ -113,6 +116,18 @@ ul.topNav {
     bottom: -8px;
     display: block;
   }
+
+  &:before {
+    content: '';
+    height: 3px;
+    width: 4px;
+    @include noise(White);
+    bottom: -3px;
+    right: 0;
+    position: absolute;
+    display: inline-block;
+  }
+
 }
 
 //
