--- a/media/css/header.css
+++ b/media/css/header.css
@@ -76,7 +76,6 @@ ul.topNav {
 /* line 75, ../scss/header.scss */
 ul.topNav li {
   display: inline-block;
-  font-weight: bold;
 }
 /* line 79, ../scss/header.scss */
 ul.topNav li a {
@@ -86,13 +85,30 @@ ul.topNav li a {
   text-decoration: none;
   line-height: 46px;
 }
-/* line 88, ../scss/header.scss */
+/* line 87, ../scss/header.scss */
+ul.topNav li a:hover {
+  background: url(../images/noiseGrey.png) repeat left center;
+  color: #222;
+  position: relative;
+}
+/* line 92, ../scss/header.scss */
+ul.topNav li a:hover:before {
+  content: '';
+  background: rgba(0, 0, 0, 0.1);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1px;
+  width: 100%;
+}
+/* line 129, ../scss/header.scss */
 ul.topNav li.selected a {
   background: url(../images/noiseblue.png) repeat left center;
   color: #fff;
   position: relative;
 }
-/* line 93, ../scss/header.scss */
+/* line 134, ../scss/header.scss */
 ul.topNav li.selected a:after {
   content: '';
   width: 0px;
@@ -104,7 +120,7 @@ ul.topNav li.selected a:after {
   top: 0;
   right: 0;
 }
-/* line 107, ../scss/header.scss */
+/* line 148, ../scss/header.scss */
 ul.topNav:after {
   content: '';
   height: 5px;
@@ -120,7 +136,7 @@ ul.topNav:after {
   bottom: -8px;
   display: block;
 }
-/* line 120, ../scss/header.scss */
+/* line 161, ../scss/header.scss */
 ul.topNav:before {
   content: '';
   height: 3px;
