--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -35,8 +35,8 @@ h1 {
     //font-style: italic;
     color: #636363;
     vertical-align: top;
-    text-align:center;
-    display:block;
+    text-align: center;
+    display: block;
 
     //em {
     //  color: $orange;
@@ -74,7 +74,7 @@ ul.topNav {
 
   li {
     display: inline-block;
-    font-weight: bold;
+    //font-weight: bold;
 
     a {
       display: inline-block;
@@ -83,6 +83,47 @@ ul.topNav {
       text-decoration: none;
       //@include border-radius(0.5em);
       line-height: $liHeight;
+
+      &:hover {
+        @include noise(Grey);
+        color: #222;
+        position: relative;
+
+        &:before {
+          content: '';
+          background:rgba(#000, 0.1);
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 1px;
+          width: 100%;
+        }
+
+        //&:before {
+        //  content: '';
+        //  @include noise(BlueLight);
+        //  background:rgba(#fff, 0.5);
+        //  display: block;
+        //  position: absolute;
+        //  bottom: -3px;
+        //  left: 0;
+        //  height: 3px;
+        //  width: 100%;
+        //  //z-index: 100;
+        //}
+        //&:after{
+        //  content: '';
+        //  width: 0px;
+        //  height: 0px;
+        //  border-style: solid;
+        //  border-width: 0 58px 32px 0;
+        //  border-color: transparent rgba(#fff, 0.2) transparent transparent;
+        //  position: absolute;
+        //  top: 0;
+        //  right: 0;
+        //}
+      }
     }
 
     &.selected a {
