made noisy backgrounds also include the correct background color in case the image doesnt load

--- a/media/css/header.css
+++ b/media/css/header.css
@@ -16,8 +16,9 @@ h1 {
   display: inline-block;
   text-transform: uppercase;
   font-family: 'Arvil Sans', Arial;
-  background: url(../images/noisewhite.png) repeat left center;
+  background: url(../images/noisewhite.png) repeat left center white;
   border-style: solid;
+  border-color: #e0e0e0;
   -moz-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
@@ -63,8 +64,9 @@ ul.topNav {
   margin: 66px 0 0 0;
   list-style: none;
   width: 670px;
-  background: url(../images/noisewhite.png) repeat left center;
+  background: url(../images/noisewhite.png) repeat left center white;
   border-style: solid;
+  border-color: #25bfff;
   -moz-border-image: url(../images/noiseblue.png) 0 0 3 0 repeat repeat;
   -webkit-border-image: url(../images/noiseblue.png) 0 0 3 0 repeat repeat;
   -webkit-border-image: url(../images/noiseblue.png) 0 0 3 0 repeat repeat;
@@ -88,7 +90,7 @@ ul.topNav li a {
 }
 /* line 86, ../scss/header.scss */
 ul.topNav li a:hover {
-  background: url(../images/noiseGrey.png) repeat left center;
+  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   color: #222;
   position: relative;
 }
@@ -105,7 +107,7 @@ ul.topNav li a:hover:before {
 }
 /* line 128, ../scss/header.scss */
 ul.topNav li.selected a {
-  background: url(../images/noiseblue.png) repeat left center;
+  background: url(../images/noiseblue.png) repeat left center #25bfff;
   color: #fff;
   position: relative;
 }
@@ -126,8 +128,9 @@ ul.topNav:after {
   content: '';
   height: 5px;
   width: 100%;
-  background: url(../images/noisewhite.png) repeat left center;
+  background: url(../images/noisewhite.png) repeat left center white;
   border-style: solid;
+  border-color: #e0e0e0;
   -moz-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
@@ -143,7 +146,7 @@ ul.topNav:before {
   content: '';
   height: 3px;
   width: 4px;
-  background: url(../images/noisewhite.png) repeat left center;
+  background: url(../images/noisewhite.png) repeat left center white;
   bottom: -3px;
   right: 0;
   position: absolute;
