--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -73,8 +73,9 @@
 .blog .blogPost .postDetails {
   color: #aaaaaa;
   display: block;
-  background: url(../images/noiseGrey.png) repeat left center;
+  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
+  border-color: #e0e0e0;
   -moz-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
