--- a/media/css/main.css
+++ b/media/css/main.css
@@ -8,7 +8,7 @@
 /* line 3, ../scss/main.scss */
 body {
   text-align: center;
-  background: url(../images/noiseGrey.png) repeat left center;
+  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   padding: 0;
 }
 
@@ -22,8 +22,9 @@ body {
 #container:before {
   content: '';
   display: block;
-  background: url(../images/noisewhite.png) repeat left center;
+  background: url(../images/noisewhite.png) repeat left center white;
   border-style: solid;
+  border-color: #e0e0e0;
   -moz-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 0 0 2 0 repeat repeat;
@@ -52,7 +53,7 @@ body {
 
 /* line 36, ../scss/main.scss */
 .alert-success {
-  background: url(../images/noisegreen.png) repeat left center;
+  background: url(../images/noisegreen.png) repeat left center #a6d95d;
   color: #fff;
 }
 /* line 40, ../scss/main.scss */
@@ -67,7 +68,7 @@ body {
 
 /* line 50, ../scss/main.scss */
 .content {
-  background: url(../images/noiseGreyMedium.png) repeat left center;
+  background: url(../images/noiseGreyMedium.png) repeat left center #f3f3f3;
   border: 1px solid #dfdfdf;
   padding: 30px;
   -webkit-border-radius: 0.25em;
